--- a/dstv.css
+++ b/dstv.css
@@ -6,106 +6,49 @@ body{
     justify-content: center;
     background-attachment: fixed;
     display:flex;
-    padding-top: 1rem;
-    height: 100vh;
-}
-.section-one{
-    height: 600px;
-    width: 470px;
-    background: rgba(0, 0, 0, 0.338);
-    position: absolute;
-    justify-content: center;
-    top: 4.5rem;
-    left: 31.5rem;
-}
-.section-two {
-    height: 600px;
-    width: 470px;
-    background-color: rgba(3, 63, 119, 0.55);
-    justify-content: center;
-    position: relative;
-}
-.mydstv{
-    height: -moz-fit-content;
-    height: fit-content;
-    width: -moz-fit-content;
-    width: fit-content;
-    position: relative;
-    bottom: 5rem;
-    left: 7rem;
+    margin: 0;
+    padding: 3rem 0;
 }
 
-img{
-width: 250px;
-height: 300px;
+.section-one{
+    height: 84vh;
+    width: 30.6vw;
+    background: rgba(0, 0, 0, 0.338);
+    position: relative;
+    justify-content: center;
+    margin: 0;
 }
+
+.section-two {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    overflow: hidden;
+    background-color: rgba(3, 63, 119, 0.55);
+    margin: 0;
+}
+
+.container1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-top: 2rem;
+    margin-bottom: 3rem;
+}
+
+.mydstv{
+    height: 9vh;
+    width: auto;
+}
+
+.mydstv img{
+width: 250px;
+height: 100%;
+}
+
 .para-1{
-display: block;
 justify-content: center;
 position: relative;
-bottom: 13rem;
-}
-
-.sign-in{
-    background-color: #28b8f1b7;
-    border-radius: 50px 50px 50px 50px;
-    width: 200px;
-    height: 40px;
-    border-color: #28b8f1b7;
-    color: gainsboro;
-    position: relative;
-    bottom: 12rem;
-    outline: none;
-}
-
-input[type="checkbox"] {
-width: 2em;
-height: 2em;
-accent-color:rgb(100, 100, 100);
-position: relative;
-left: 20px;
-box-shadow: 0px 0px 5px rgba(66, 133, 244, 0.5);
-}
-
-option{
-    background-color: #ffff;
-    color: black;
-    text-align: center;
-}
-
-#label{
-font-size: large;
-color: white;
-position: relative;
-bottom:7px;
-left: 20px;
-}
-
-.form{
-    position:relative;
-    bottom:11rem;
-    justify-content: center;
-    left: 2rem;
-}
-
-.box-space1{
-    background-color: #d6d4f17b;
-    border-radius: 50px 50px 50px 50px;
-    width: 350px;
-    height: 40px;
-    border-color: #d6d4f17b;
-    outline: none;
-    position: absolute;
-}
-.box-space2{
-    background-color: #d6d4f17b;
-    border-radius: 50px 50px 50px 50px;
-    width: 350px;
-    height: 35px;
-    border-color: #d6d4f17b;
-    outline: none;
-    position: absolute;
-    right: 6rem;
 }
 
 p{
@@ -114,34 +57,169 @@ p{
     font-size: larger;
     font-family: sans-serif;
 }
+
 strong{
     font-weight: bolder;
 }
-::placeholder{
-color: white;
-font-weight: 600px;
-font-size: 15px;
-position: relative;
-left: 60px;
+
+.container2{
+    display: flex;
+    justify-content: center;
+    margin-left: 3rem;
+    width: 80%;
+    position: relative;
+    height: 5vh;
+    align-items: center;
+}
+
+
+.container3{
+    margin-top: 4rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 80%;
+    position: relative;
+    margin-left: 3rem;
+    height: 5vh;
 }
 
 select{
-color: white;
-font-weight: 600;
-font-size: 15px;
+    color: white;
+    font-weight: 600;
+    font-size: 15px;
 }
+
+.box-space1, .box-space2{
+    background-color: #d6d4f17b;
+    border-radius: 50px 50px 50px 50px;
+    width: 100%;
+    height: 100%;
+    border-color: #d6d4f17b;
+    outline: none;
+    border-style: none;
+}
+
+.box-space2::placeholder{
+    color: white;
+    font-weight: 500;
+    font-size: 15px;
+    text-align: center;
+}
+
+option{
+    background-color: #ffff;
+    color: black;
+    text-align: center;
+}
+
 .fa-location-dot, .fa-server, .fa-user-plus{
-    position: relative;
-    left: 1.6rem;
-    top: 0.65rem;
+    position: absolute;
+    left: 1%;
 }
+
+#scNumber::-webkit-inner-spin-button, #scNumber::-webkit-outer-spin-button{
+    -webkit-appearance: none;
+    margin: 0;
+}
+
 .fa-circle-info{
-    position: relative;
-    left: 19.6rem;
-    top: 0.65rem;
+    position: absolute;
+    right: .5%;
 }
-.fa-angle-right{
+
+.checkbox1{
+    width: -moz-fit-content;
+    width: fit-content;
+    margin: 2rem auto;
+    align-content: center;
+    justify-content: center;
+    height: 4vh;
     position: relative;
-    bottom: 10.85rem;
-    right: 1.5rem;
+}
+
+#checkbox1{
+    accent-color:rgb(100, 100, 100);
+    box-shadow: 0px 0px 5px rgba(66, 133, 244, 0.5);
+    }
+
+#label{
+    font-size: medium;
+    color: white;
+}
+
+#sign-in{
+    width: 10vw;
+    margin: 0 auto;
+    height: 4vh;
+    position: relative;
+}
+
+.sign-in{
+    background-color: #28b8f1b7;
+    border-radius: 50px 50px 50px 50px;
+    width: 100%;
+    height: 100%;
+    border-color: #28b8f1b7;
+    color: gainsboro;
+    position: relative;
+    outline: none;
+    border-style: none;
+    cursor: pointer;
+}
+
+.fa-angle-right{
+    position: absolute;
+    right: 1%;
+    top: 20%;
+}
+
+
+/* media query */
+
+@media screen and (max-width: 1230px) {
+    body{
+        background-position-x: center;
+    }
+
+    .container2, .container3{
+        margin-left: 2rem;
+    }
+
+    .section-one{
+        width: 45vw;
+    }
+}
+
+@media screen and (max-width: 1120px) {
+    .section-one{
+        height: 89vh;
+        width: 50vw;
+    }
+}
+
+@media screen and (max-width: 920px) {
+    body{
+        background-position-x: right;
+    }
+
+    .section-one{
+        height: 80vh;
+        width: 55vw;
+    }
+
+    #sign-in{
+        width: 15vw;
+    }
+}
+
+@media screen and (max-width: 520px) {
+    .section-one{
+        height: 84vh;
+        width: 80vw;
+    }
+
+    #sign-in{
+        width: 20vw;
+    }
 }
